# mosek-license-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  copyright.txt  license_server.sh  mosek_license_server-0.9.1-py3-none-any.whl  mosek_license_server-0.9.2-py3-none-any.whl  mosek_license_server-0.9.3-py3-none-any.whl  mosek_license_server-0.9.4-py3-none-any.whl  mosek_license_server-0.9.5-py3-none-any.whl  mosek_license_server-0.9.6-py3-none-any.whl  mosek_license_server-1.0.0-py3-none-any.whl  mosek_license_server-1.1.0-py3-none-any.whl  pyproject.toml  readme.md  start_server.sh  taskfile.yml
.devcontainer/: startup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  renovate.json
.github/workflows/: book.yml  ci.yml  coverage.yml  deptry.yml  linting.yml  pre-commit.yml  release.yml  test.yml
book/: _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md  reports.md
book/docs/: api.html  api.md  index.html  reports.html  reports.md
book/marimo/: mosek_demo.py
book/sphinx/: conf.py
demo/: demo.py
license/: index.html
licenses/: index.html
mosek_license/: __init__.py  license.py
pdoc/: index.html  mosek_license.html  search.js
pdoc/mosek_license/: license.html
sphinx/: genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_modules/: index.html
sphinx/_modules/mosek_license/: license.html
sphinx/_sources/autoapi/: index.rst.txt
sphinx/_sources/autoapi/mosek_license/: index.rst.txt
sphinx/_sources/autoapi/mosek_license/license/: index.rst.txt
sphinx/autoapi/: index.html
sphinx/autoapi/mosek_license/: index.html
sphinx/autoapi/mosek_license/license/: index.html
src/mosek_license/: license.py
src/tests/: test_mosek_license.py
src/tests/resources/: license
tests/: demo.py  test_current.py  test_mosek_license.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_24c361a8535403e6___init___py.html  z_24c361a8535403e6_license_py.html  z_964319cef382c1e7___init___py.html  z_964319cef382c1e7_license_py.html
tests/html-report/: report.html
tests/resources/: license_p1  license_p2  license_p3
web/: .gitignore
