[project]
name = "mosek-license-server"
version = "0.0.0"
description = "Expose a mosek license via a nginx server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]

[project.urls]
repository = "https://github.com/tschm/mosek-license-server"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mosek_license"]
