[project]
name = "mosek-license-server"
version = "0.0.0"
description = "Expose a mosek license via a nginx server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
repository = "https://github.com/tschm/mosek-license-server"
mosek = "https://www.mosek.com"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mosek_license"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "copyright.txt",
    "mosek_license"
]
